welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:-6: error: Missing closing brace `}' assumed here
try {
^twoAsOne:1: error: expected class or object definition
def twoAsOne(a:Int, b:Int, c:Int):Boolean = {
^